// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attributes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 48,
          "line": 0,
          "offset": 48,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {
        "className": Array [
          "bar",
          "baz",
        ],
        "dataQux": "quux",
        "id": "foo",
      },
      "tagName": "p",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 1,
          "offset": 51,
        },
        "start": Object {
          "column": 48,
          "line": 0,
          "offset": 48,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 24,
          "line": 1,
          "offset": 73,
        },
        "start": Object {
          "column": 2,
          "line": 1,
          "offset": 51,
        },
      },
      "properties": Object {
        "data123": "456",
      },
      "tagName": "p",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 2,
          "offset": 76,
        },
        "start": Object {
          "column": 24,
          "line": 1,
          "offset": 73,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "properties": Object {
        "alt": "",
        "hidden": true,
      },
      "tagName": "img",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 3,
          "offset": 95,
        },
        "start": Object {
          "column": 18,
          "line": 2,
          "offset": 92,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 18,
          "line": 3,
          "offset": 111,
        },
        "start": Object {
          "column": 2,
          "line": 3,
          "offset": 95,
        },
      },
      "properties": Object {
        "download": true,
      },
      "tagName": "a",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 4,
          "offset": 114,
        },
        "start": Object {
          "column": 18,
          "line": 3,
          "offset": 111,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 30,
          "line": 4,
          "offset": 142,
        },
        "start": Object {
          "column": 2,
          "line": 4,
          "offset": 114,
        },
      },
      "properties": Object {
        "download": "example.mp3",
      },
      "tagName": "a",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Attributes with colon or @ as prefix 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 31,
          "line": 0,
          "offset": 31,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {
        ":type": "",
        "@foo": "bar",
      },
      "tagName": "div",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Attributes with namespace 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 54,
          "line": 0,
          "offset": 54,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {
        "xmlnsXLink": "http://www.w3.org/1999/xlink",
      },
      "tagName": "svg",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Case sensitive attributes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 17,
          "line": 0,
          "offset": 17,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {
        "async": true,
      },
      "tagName": "div",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Comment 1`] = `
Object {
  "children": Array [
    Object {
      "position": Object {
        "end": Object {
          "column": 4,
          "line": 0,
          "offset": 4,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "type": "comment",
      "value": " foo ",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Doctype 1`] = `
Object {
  "children": Array [
    Object {
      "name": "html",
      "position": Object {
        "end": Object {
          "column": 15,
          "line": 0,
          "offset": 15,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "public": null,
      "system": null,
      "type": "doctype",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Doctype nameless 1`] = `
Object {
  "children": Array [
    Object {
      "name": "html",
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 0,
          "offset": 10,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "public": null,
      "system": null,
      "type": "doctype",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Doctype with html skeleton 1`] = `
Object {
  "children": Array [
    Object {
      "name": "html",
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 0,
          "offset": 10,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "public": null,
      "system": null,
      "type": "doctype",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 29,
              "line": 0,
              "offset": 29,
            },
            "start": Object {
              "column": 16,
              "line": 0,
              "offset": 16,
            },
          },
          "properties": Object {},
          "tagName": "head",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 38,
                  "line": 0,
                  "offset": 38,
                },
                "start": Object {
                  "column": 35,
                  "line": 0,
                  "offset": 35,
                },
              },
              "type": "text",
              "value": "foo",
            },
          ],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 45,
              "line": 0,
              "offset": 45,
            },
            "start": Object {
              "column": 29,
              "line": 0,
              "offset": 29,
            },
          },
          "properties": Object {},
          "tagName": "body",
          "type": "element",
        },
      ],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 52,
          "line": 0,
          "offset": 52,
        },
        "start": Object {
          "column": 10,
          "line": 0,
          "offset": 10,
        },
      },
      "properties": Object {},
      "tagName": "html",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Element void 1`] = `
Object {
  "children": Array [
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 1,
          "offset": 3,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "properties": Object {},
      "tagName": "img",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 2,
          "offset": 11,
        },
        "start": Object {
          "column": 7,
          "line": 1,
          "offset": 8,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "properties": Object {},
      "tagName": "hr",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 3,
          "offset": 18,
        },
        "start": Object {
          "column": 6,
          "line": 2,
          "offset": 15,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "properties": Object {},
      "tagName": "br",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 4,
          "offset": 25,
        },
        "start": Object {
          "column": 6,
          "line": 3,
          "offset": 22,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "properties": Object {},
      "tagName": "meta",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 2,
          "line": 5,
          "offset": 34,
        },
        "start": Object {
          "column": 8,
          "line": 4,
          "offset": 31,
        },
      },
      "type": "text",
      "value": "
  ",
    },
    Object {
      "children": Array [],
      "data": Object {
        "selfClosing": false,
      },
      "properties": Object {},
      "tagName": "area",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`SVG - should preserve explicit svg namespace 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 2,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 5,
              "line": 0,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "
  ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 147,
                },
                "start": Object {
                  "column": 136,
                  "line": 1,
                  "offset": 142,
                },
              },
              "type": "text",
              "value": "
    ",
            },
            Object {
              "children": Array [],
              "data": Object {
                "selfClosing": true,
              },
              "position": Object {
                "end": Object {
                  "column": 52,
                  "line": 2,
                  "offset": 195,
                },
                "start": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 147,
                },
              },
              "properties": Object {
                "cx": "60",
                "cy": "60",
                "fill": "red",
                "r": "50",
              },
              "tagName": "svg:circle",
              "type": "element",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 4,
                  "line": 3,
                  "offset": 200,
                },
                "start": Object {
                  "column": 52,
                  "line": 3,
                  "offset": 195,
                },
              },
              "type": "text",
              "value": "
    ",
            },
            Object {
              "children": Array [],
              "data": Object {
                "selfClosing": true,
              },
              "position": Object {
                "end": Object {
                  "column": 54,
                  "line": 3,
                  "offset": 250,
                },
                "start": Object {
                  "column": 4,
                  "line": 3,
                  "offset": 200,
                },
              },
              "properties": Object {
                "cx": "170",
                "cy": "60",
                "fill": "green",
                "r": "50",
              },
              "tagName": "svg:circle",
              "type": "element",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 4,
                  "offset": 253,
                },
                "start": Object {
                  "column": 54,
                  "line": 4,
                  "offset": 250,
                },
              },
              "type": "text",
              "value": "
  ",
            },
          ],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 12,
              "line": 4,
              "offset": 263,
            },
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 8,
            },
          },
          "properties": Object {
            "height": "120",
            "viewBox": "0 0 200 200",
            "width": "230",
            "xmlns": "http://www.w3.org/2000/svg",
            "xmlnsXLink": "http://www.w3.org/1999/xlink",
          },
          "tagName": "svg:svg",
          "type": "element",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 0,
              "line": 5,
              "offset": 264,
            },
            "start": Object {
              "column": 12,
              "line": 4,
              "offset": 263,
            },
          },
          "type": "text",
          "value": "
",
        },
      ],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 6,
          "line": 5,
          "offset": 270,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "div",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`SVG 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 2,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 5,
              "line": 0,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "
  ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 143,
                },
                "start": Object {
                  "column": 132,
                  "line": 1,
                  "offset": 138,
                },
              },
              "type": "text",
              "value": "
    ",
            },
            Object {
              "children": Array [],
              "data": Object {
                "selfClosing": true,
              },
              "position": Object {
                "end": Object {
                  "column": 48,
                  "line": 2,
                  "offset": 187,
                },
                "start": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 143,
                },
              },
              "properties": Object {
                "cx": "60",
                "cy": "60",
                "fill": "red",
                "r": "50",
              },
              "tagName": "circle",
              "type": "element",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 4,
                  "line": 3,
                  "offset": 192,
                },
                "start": Object {
                  "column": 48,
                  "line": 3,
                  "offset": 187,
                },
              },
              "type": "text",
              "value": "
    ",
            },
            Object {
              "children": Array [],
              "data": Object {
                "selfClosing": true,
              },
              "position": Object {
                "end": Object {
                  "column": 50,
                  "line": 3,
                  "offset": 238,
                },
                "start": Object {
                  "column": 4,
                  "line": 3,
                  "offset": 192,
                },
              },
              "properties": Object {
                "cx": "170",
                "cy": "60",
                "fill": "green",
                "r": "50",
              },
              "tagName": "circle",
              "type": "element",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 4,
                  "offset": 241,
                },
                "start": Object {
                  "column": 50,
                  "line": 4,
                  "offset": 238,
                },
              },
              "type": "text",
              "value": "
  ",
            },
          ],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 8,
              "line": 4,
              "offset": 247,
            },
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 8,
            },
          },
          "properties": Object {
            "height": "120",
            "viewBox": "0 0 200 200",
            "width": "230",
            "xmlns": "http://www.w3.org/2000/svg",
            "xmlnsXLink": "http://www.w3.org/1999/xlink",
          },
          "tagName": "svg",
          "type": "element",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 0,
              "line": 5,
              "offset": 248,
            },
            "start": Object {
              "column": 8,
              "line": 4,
              "offset": 247,
            },
          },
          "type": "text",
          "value": "
",
        },
      ],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 6,
          "line": 5,
          "offset": 254,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "div",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Simple 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 0,
                  "offset": 11,
                },
                "start": Object {
                  "column": 8,
                  "line": 0,
                  "offset": 8,
                },
              },
              "type": "text",
              "value": "foo",
            },
          ],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 0,
              "offset": 15,
            },
            "start": Object {
              "column": 5,
              "line": 0,
              "offset": 5,
            },
          },
          "properties": Object {},
          "tagName": "p",
          "type": "element",
        },
      ],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 21,
          "line": 0,
          "offset": 21,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "div",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;

exports[`Template 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 0,
              "offset": 21,
            },
            "start": Object {
              "column": 20,
              "line": 0,
              "offset": 20,
            },
          },
          "type": "text",
          "value": "!",
        },
      ],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 32,
          "line": 0,
          "offset": 32,
        },
        "start": Object {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "properties": Object {
        "id": "text",
      },
      "tagName": "template",
      "type": "element",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 4,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 32,
          "line": 0,
          "offset": 32,
        },
      },
      "type": "text",
      "value": "
    ",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 42,
                  "line": 1,
                  "offset": 75,
                },
                "start": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 65,
                },
              },
              "type": "text",
              "value": "importance",
            },
          ],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 51,
              "line": 1,
              "offset": 84,
            },
            "start": Object {
              "column": 24,
              "line": 1,
              "offset": 57,
            },
          },
          "properties": Object {},
          "tagName": "strong",
          "type": "element",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 56,
              "line": 1,
              "offset": 89,
            },
            "start": Object {
              "column": 51,
              "line": 1,
              "offset": 84,
            },
          },
          "type": "text",
          "value": " and ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 68,
                  "line": 1,
                  "offset": 101,
                },
                "start": Object {
                  "column": 60,
                  "line": 1,
                  "offset": 93,
                },
              },
              "type": "text",
              "value": "emphasis",
            },
          ],
          "data": Object {
            "selfClosing": false,
          },
          "position": Object {
            "end": Object {
              "column": 73,
              "line": 1,
              "offset": 106,
            },
            "start": Object {
              "column": 56,
              "line": 1,
              "offset": 89,
            },
          },
          "properties": Object {},
          "tagName": "em",
          "type": "element",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 74,
              "line": 1,
              "offset": 107,
            },
            "start": Object {
              "column": 73,
              "line": 1,
              "offset": 106,
            },
          },
          "type": "text",
          "value": ".",
        },
      ],
      "data": Object {
        "selfClosing": false,
      },
      "position": Object {
        "end": Object {
          "column": 85,
          "line": 1,
          "offset": 118,
        },
        "start": Object {
          "column": 4,
          "line": 1,
          "offset": 37,
        },
      },
      "properties": Object {
        "id": "html",
      },
      "tagName": "TEMPLATE",
      "type": "element",
    },
  ],
  "data": Object {
    "selfClosing": false,
  },
  "type": "root",
}
`;
